     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    FaradayCup History file
                    -----------------------

5 November 2014: Shaun Marshall
- Change silly delimeter mistake, readability cleanup

4 November 2014: Shaun Marshall
- Move tally file populating to SteppingAction (dynamic collection)

2 November 2014: Shaun Marshall
- Cu/KA netCharge bins (KA linearly proportional)

30 Oct 2014: Shaun Marshall
- Corrected data directory construction

29 Oct 2014: Shaun Marshall
- Cleanup of the working model