@@ -1,37 +1,25 @@
 # Macro file for FaradayCup
-# 
-# Can be run in batch, without graphic
-# or interactively: Idle> /control/execute run1.mac
 #
-# Default kinematics: 
-# electron 50 MeV in direction (0.,0.,1.)
-# 1 event with tracking/verbose
-#
-#/tracking/verbose 1
-#/run/beamOn 1
-#
-#
-# proton 250 MeV in direction (0.,0.,1.)
-# 10 events
-#
+# Run proton beam ...
 /gun/particle proton
-/gun/energy 250 MeV
+# ... with energies from Heidleburg experiment
+#
+/gun/energy 70.03 MeV
 /run/beamOn 1000
 #
-# 20 events
+/gun/energy 100.46 MeV
+/run/beamOn 1000
+#
+/gun/energy 130.52 MeV
+/run/beamOn 1000
+#
+/gun/energy 160.09 MeV
+/run/beamOn 1000
+#
+/gun/energy 190.48 MeV
+/run/beamOn 1000
+#
+/gun/energy 221.06 MeV
+/run/beamOn 1000
 #
 /tracking/verbose 0
-##/run/printProgress 5
-##/run/beamOn 10
-#
-# Magnetic field
-# 
-/globalField/setValue 0.2 0 0 tesla
-#/run/beamOn 3
-#
-# Activate/inactivate physics processes
-#
-##/process/list
-##/process/inactivate eBrem
-##/run/beamOn 10
-#
